--- a/packages/docs/content/docs/concepts/cli.mdx
+++ b/packages/docs/content/docs/concepts/cli.mdx
@@ -83,6 +83,7 @@ npx motia dev [options]
 
 Options:
 - `-p, --port <port>`: The port to run the server on (default: 3000).
+- `-H, --host [host]`: The host address for the server (default: localhost).
 - `-v, --verbose`: Enable verbose logging.
 - `-d, --debug`: Enable debug logging.
 
